--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#################################################################
+###################       DATA SOURCE       #####################
+#################################################################
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=admin
+spring.datasource.password=12345678
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.continue-on-error=true
 
